--- a/latex/used_pkgs.bib
+++ b/latex/used_pkgs.bib
@@ -307,7 +307,7 @@ https://personality-project.org/r/psych-manual.pdf},
 @Article{colorspace2009a,
   title = {Escaping {RGB}land: Selecting Colors for Statistical Graphics},
   author = {Achim Zeileis and Kurt Hornik and Paul Murrell},
-  journal = {Computational Statistics \\& Data Analysis},
+  journal = {Computational Statistics \& Data Analysis},
   year = {2009},
   volume = {53},
   number = {9},
