Updates from Overleaf

--- a/latex/HS_Oceanic.bib
+++ b/latex/HS_Oceanic.bib
@@ -4280,6 +4280,44 @@ booktitle={Phylogenetic Methods and the Prehistory of Languages}
   page = {140-161}
 }
 
+
+
+
+
+
+
+
+@article{sayre_2008_carrying_capacity,
+author = { Nathan F.   Sayre },
+title = {The Genesis, History, and Limits of Carrying Capacity},
+journal = {Annals of the Association of American Geographers},
+volume = {98},
+number = {1},
+pages = {120-134},
+year  = {2008},
+publisher = {Routledge},
+doi = {10.1080/00045600701734356},
+
+URL = { 
+    
+        https://doi.org/10.1080/00045600701734356
+    
+    
+
+},
+eprint = { 
+    
+        https://doi.org/10.1080/00045600701734356
+    
+    
+
+}
+
+}
+
+
+
+
 @book{sapir1916time,
   title = {Time {{Perspective}} in {{Aboriginal}} {{American}} {{Culture}}: {{A Study}} in {{Method}}},
   author = {Sapir, Edward},
@@ -5225,14 +5263,6 @@ editor={Brian D. Joseph and Richard D Janda},
   author={Foucault, Michel},
   year={2007},
   publisher={Springer}
-}
-
-@Book{sp2013,
-  author = {Roger S. Bivand and Edzer Pebesma and Virgilio Gomez-Rubio},
-  title = {Applied spatial data analysis with {R}, Second edition},
-  year = {2013},
-  publisher = {Springer, NY},
-  url = {https://asdar-book.org/},
 }
 
 @article{pearl1995causal,
