Updates from Overleaf

--- a/latex/HS_Oceanic.bib
+++ b/latex/HS_Oceanic.bib
@@ -2889,6 +2889,25 @@ booktitle={Phylogenetic Methods and the Prehistory of Languages}
   src = {hh, langsci, wals}
 }
 
+@misc{elcat,
+title={Catalogue of Endangered Languages}, 
+year={2023},
+author={University of Hawaii at Manoa}, 
+url={http://www.endangeredlanguages.com}
+}
+
+@article{cattell1966scree,
+  title={The scree test for the number of factors},
+  author={Cattell, Raymond B},
+  journal={Multivariate behavioral research},
+  volume={1},
+  number={2},
+  pages={245--276},
+  year={1966},
+  publisher={Taylor \& Francis}
+}
+
+
 @article{lindell_simon_course_2018,
   title = {Reconstructing the {{Past}}: {{Phylogenies}} and {{Dates}} from {{DNA}} and {{Languages}}},
   author = {Bromham, Lindell and Greenhill, Simon},
